rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x672_2010_CINF-module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x672_2010_CINF-module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod cinf_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct ChildDetails {
        #[rasn(identifier = "orsSupported")]
        pub ors_supported: bool,
        #[rasn(identifier = "unicodeLabels")]
        pub unicode_labels: UnicodeLabels,
    }
    impl ChildDetails {
        pub fn new(ors_supported: bool, unicode_labels: UnicodeLabels) -> Self {
            Self {
                ors_supported,
                unicode_labels,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(choice, automatic_tags)]
    pub enum ChildInformation {
        noDisclosure(()),
        disclosure(Information),
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct Information {
        #[rasn(identifier = "disclosedChildren")]
        pub disclosed_children: SequenceOf<ChildDetails>,
        #[rasn(value("-1.."), identifier = "otherChildren")]
        pub other_children: Integer,
    }
    impl Information {
        pub fn new(disclosed_children: SequenceOf<ChildDetails>, other_children: Integer) -> Self {
            Self {
                disclosed_children,
                other_children,
            }
        }
    }
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(delegate, identifier = "Non-numericUnicodeLabel")]
    pub struct NonNumericUnicodeLabel(pub Utf8String);
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(automatic_tags)]
    pub struct UnicodeLabels {
        #[rasn(identifier = "numericLabel")]
        pub numeric_label: Integer,
        #[rasn(identifier = "non-numeric")]
        pub non_numeric: SequenceOf<NonNumericUnicodeLabel>,
    }
    impl UnicodeLabels {
        pub fn new(
            numeric_label: Integer,
            non_numeric: SequenceOf<NonNumericUnicodeLabel>,
        ) -> Self {
            Self {
                numeric_label,
                non_numeric,
            }
        }
    }
}
