rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x680_2002_ASN1-CHARACTER-MODULE.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x680_2002_ASN1-CHARACTER-MODULE.asn1
---
Error matching ASN syntax at while parsing:
    ╭─[line 9, column 15]
    │
    │ 
 01 │  -- CAUSES STACK OVERFLOW
 09 │  -- -- Module ASN1-CHARACTER-MODULE (X.680:07/2002) ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 10 │  -- -- See also ITU-T X.680 (07/2002)
 11 │  -- -- See also the index of all ASN.1 assignments needed in this document
 13 │  -- ASN1-CHARACTER-MODULE {joint-iso-itu-t asn1(1) specification(0) modules(0)
 14 │  --   iso10646(0)} DEFINITIO
    │
────╯
