rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x680_2008_ASN1-Object-Identifier-Module.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x680_2008_ASN1-Object-Identifier-Module.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod asn1_object_identifier_module {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[doc = " ASN.1 Character Module (see 42.1)"]
    pub static ASN1_CHARACTER_MODULE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 0u32, 0u32, 0u32]).to_owned());
    #[doc = " ASN.1 Object Identifier Module (this module)"]
    pub static ASN1_OBJECT_IDENTIFIER_MODULE: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 0u32, 0u32, 1u32]).to_owned());
    #[doc = " BER encoding of a single ASN.1 type"]
    pub static BER: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 1u32]).to_owned());
    #[doc = " CER encoding of a single ASN.1 type"]
    pub static CER: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 2u32, 0u32]).to_owned());
    #[doc = " DER encoding of a single ASN.1 type"]
    pub static DER: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 2u32, 1u32]).to_owned());
    #[doc = " NumericString ASN.1 type (see 41.3)"]
    pub static NUMERIC_STRING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 0u32, 1u32, 0u32]).to_owned());
    #[doc = " PER encoding of a single ASN.1 type (basic aligned)"]
    pub static PER_BASIC_ALIGNED: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 3u32, 0u32, 0u32]).to_owned());
    #[doc = " PER encoding of a single ASN.1 type (basic unaligned)"]
    pub static PER_BASIC_UNALIGNED: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 3u32, 0u32, 1u32]).to_owned());
    #[doc = " PER encoding of a single ASN.1 type (canonical aligned)"]
    pub static PER_CANONICAL_ALIGNED: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 3u32, 1u32, 0u32]).to_owned());
    #[doc = " PER encoding of a single ASN.1 type (canonical unaligned)"]
    pub static PER_CANONICAL_UNALIGNED: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 3u32, 1u32, 1u32]).to_owned());
    #[doc = " PrintableString ASN.1 type (see 41.5)"]
    pub static PRINTABLE_STRING: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 0u32, 1u32, 1u32]).to_owned());
    #[doc = " XER encoding of a single ASN.1 type (basic)"]
    pub static XER_BASIC: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 5u32, 0u32]).to_owned());
    #[doc = " XER encoding of a single ASN.1 type (canonical)"]
    pub static XER_CANONICAL: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 5u32, 1u32]).to_owned());
    #[doc = " EXER encoding of a single ASN.1 type (extended)"]
    pub static XER_EXTENDED: LazyLock<ObjectIdentifier> =
        LazyLock::new(|| Oid::const_new(&[2u32, 1u32, 5u32, 2u32]).to_owned());
}
