rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x680_2008_DefinedTimeTypes.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x680_2008_DefinedTimeTypes.asn1
---
Error matching ASN syntax at while parsing:
   ╭─[line 5, column 18]
   │
   │ 
 5 │  ((SETTINGS "Basic=Date Date=C Year=Basic")| ◀▪▪▪▪▪▪▪▪▪▪ FAILED AT THIS LINE
 6 │  		      (SETTINGS "Basic=Date Date=C Year=Proleptic"))
   │
───╯
