rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x683_2002_M1.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x683_2002_M1.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod m1 {
    extern crate alloc;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    #[rasn(set, automatic_tags)]
    pub struct T1 {
        pub f1: Integer,
        pub f2: bool,
    }
    impl T1 {
        pub fn new(f1: Integer, f2: bool) -> Self {
            Self { f1, f2 }
        }
    }
}
