rasn-compiler-tests/tests/snapshots/parse_test__parses_modules@itu-t_x_x683_2008_M2.asn1.snap
---
source: rasn-compiler-tests/tests/parse_test.rs
input_file: rasn-compiler-tests/tests/modules/itu-t_x_x683_2008_M2.asn1
---
Generated:
#[allow(
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused,
    clippy::too_many_arguments
)]
pub mod m2 {
    extern crate alloc;
    use super::m1::T1;
    use core::borrow::Borrow;
    use rasn::prelude::*;
    use std::sync::LazyLock;
    #[derive(AsnType, Debug, Clone, Decode, Encode, PartialEq, Eq, Hash)]
    pub struct T3 {
        pub a: Integer,
        pub b: T1,
    }
    impl T3 {
        pub fn new(a: Integer, b: T1) -> Self {
            Self { a, b }
        }
    }
}
